# cs552-faithful-rag

./: .gitignore  .pre-commit-config.yaml  CS552_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml  gold-validation.yml  sync-classroom.yml
docs/: M2_REPORT_DATA.md  TEAM_GUIDE.md
docs/plans/: 2026-05-09-m2-plan.typ
evaluation/: __init__.py  chunking_benchmark_detailed.json
evaluation/common/: __init__.py  data_loader.py  models.py  paths.py
evaluation/crag/: __init__.py  corrective_rag.py
evaluation/faithfulness/: __init__.py  faithfulness_scorer.py
evaluation/gold_dataset/: README.md  RUBRIC.md  SCHEMA.json  SCHEMA.md  _validator.py  gold_qa.json  paper_ids.txt
frontend/: package-lock.json  package.json
individual_notebooks/: submit.sh
notebooks/: andrea_trugenberger_357615.ipynb  elie_bruno_355932.ipynb  faruk_zahiragic_415360.ipynb  submit.sh  yusif_askari_413862.ipynb
rcp_support/: Dockerfile  submit_colbert.sh  submit_embed.sh  submit_upload.sh
report/: README.md
reports/: README.md
scripts/: aggregate_gold_qa.py  build_all_colbert_indices.py  build_all_hf_indices.py  build_colbert_index.py  build_hf_index.py  compute_iaa.py  export_marimo_notebooks.py  migrate_archive_to_hf.py  push_indexes_to_hf.py  run_faithfulness_experiment.py  run_faithfulness_experiment_full.py  run_ragas_experiment.py  run_retrieval_ablation.py  snapshot_paper_ids.py  validate_gold_qa.py
tests/: conftest.py  test_aggregate_gold_qa.py  test_compute_iaa.py  test_ragas_eval.py  test_retrieval_eval.py  test_validate_gold_qa.py
(+51 files in other folders)
