[project]
name = "rag-pipeline-monorepo"
version = "1.0.1"
description = "RAG pipeline for academic papers - Monorepo workspace"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Elie Bruno" },
    { name = "Andrea Trugenberger" },
    { name = "Youssef Chelaifa" }
]

# Minimal root dependencies
dependencies = [
    "jupyter>=1.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/api",
    "packages/worker",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.1",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.22.0",
    "ty>=0.0.2",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["packages/*/tests", "tests"]
python_files = "test_*.py"
python_functions = "test_*"
